[gd_scene format=3 uid="uid://cx1jioga61fyi"]

[ext_resource type="Script" uid="uid://drrulnnoltp6a" path="res://World/world.gd" id="1_8a836"]
[ext_resource type="PackedScene" uid="uid://hvpf0nex82ol" path="res://World/Map.tscn" id="2_8a836"]
[ext_resource type="Texture2D" uid="uid://dorfc6adh3ync" path="res://Assets/button.png" id="3_0lysu"]
[ext_resource type="AudioStream" uid="uid://dhy6c2nk18ti3" path="res://Assets/sound/Getting it Done.mp3" id="3_eidgh"]
[ext_resource type="AudioStream" uid="uid://c7aosqa7hxxsm" path="res://Assets/sound/penguin_01.ogg" id="3_yf0ba"]
[ext_resource type="Texture2D" uid="uid://qp1ks566y2wh" path="res://Assets/button_down.png" id="4_26uyv"]
[ext_resource type="Texture2D" uid="uid://byesxms8bmk2a" path="res://Assets/button_down2.png" id="4_dqu5g"]
[ext_resource type="AudioStream" uid="uid://dklgxrk887q61" path="res://Assets/sound/penguin_02.ogg" id="4_eidgh"]
[ext_resource type="Texture2D" uid="uid://dwh062wf4l27u" path="res://Assets/button_hover.png" id="5_dqu5g"]
[ext_resource type="AudioStream" uid="uid://bq1yqfd7edsnv" path="res://Assets/sound/thud3.mp3" id="5_oe8m4"]
[ext_resource type="FontFile" uid="uid://d4ktqvro63ffh" path="res://Assets/ARCADEPI.TTF" id="6_o6lw0"]
[ext_resource type="AudioStream" uid="uid://cwtay1tw2opci" path="res://Assets/sound/45_Landing_01.wav" id="6_w47uh"]
[ext_resource type="AudioStream" uid="uid://bdpdc6farqeiy" path="res://Assets/sound/14_Step_water_02.wav" id="7_lo5ox"]
[ext_resource type="Texture2D" uid="uid://cf48t00l14v3q" path="res://Assets/snowball.png" id="8_dqu5g"]
[ext_resource type="AudioStream" uid="uid://b0f6h6t21aln6" path="res://Assets/sound/30_Jump_03.wav" id="9_oe8m4"]
[ext_resource type="Texture2D" uid="uid://gykjj8ag8jqm" path="res://Assets/bomb_icon.png" id="9_x0pyu"]
[ext_resource type="AudioStream" uid="uid://c4tm1jcfbtiwk" path="res://Assets/sound/explosion.mp3" id="10_awrha"]
[ext_resource type="Texture2D" uid="uid://c00sduih8mm10" path="res://Assets/spikes_throw2.png" id="10_dg1ng"]
[ext_resource type="AudioStream" uid="uid://dayay56vque2p" path="res://Assets/sound/penguin_RIP 04.wav" id="10_lo5ox"]
[ext_resource type="AudioStream" uid="uid://b7nbqb5p0tbmx" path="res://Assets/sound/penguin_RIP 05.wav" id="11_h2aik"]
[ext_resource type="Texture2D" uid="uid://dnx7p3n16ligo" path="res://Assets/wall_proj.png" id="11_yfuda"]
[ext_resource type="AudioStream" uid="uid://dxrp0keh3ac6j" path="res://Assets/sound/penguin_RIP 02.wav" id="12_0wqet"]
[ext_resource type="Texture2D" uid="uid://brqidnqc4orbb" path="res://Assets/bumper_proj.png" id="12_i8dl0"]
[ext_resource type="AudioStream" uid="uid://bcfmombvnfwxo" path="res://Assets/sound/penguin_RIP 03.wav" id="13_awrha"]
[ext_resource type="AudioStream" uid="uid://bhkuakioo6i32" path="res://Assets/sound/gun_reload_lock_or_click_sound.mp3" id="13_f23eu"]
[ext_resource type="AudioStream" uid="uid://datsgj7tt4lpp" path="res://Assets/sound/snare.wav" id="16_oeat8"]
[ext_resource type="Texture2D" uid="uid://kgg4ajjmdoib" path="res://Assets/button_long.png" id="27_i8dl0"]

[sub_resource type="Theme" id="Theme_x0pyu"]
default_font = ExtResource("6_o6lw0")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h2aik"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("3_yf0ba")
stream_1/stream = ExtResource("4_eidgh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0wqet"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("5_oe8m4")
stream_1/stream = ExtResource("6_w47uh")
stream_2/stream = ExtResource("7_lo5ox")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_awrha"]
streams_count = 2
stream_0/stream = ExtResource("10_lo5ox")
stream_1/stream = ExtResource("11_h2aik")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5xkvv"]
streams_count = 2
stream_0/stream = ExtResource("12_0wqet")
stream_1/stream = ExtResource("13_awrha")

[node name="World" type="Node2D" unique_id=1136132527]
script = ExtResource("1_8a836")

[node name="Map" parent="." unique_id=1227534341 instance=ExtResource("2_8a836")]

[node name="Team1" type="Node" parent="." unique_id=2082206343]

[node name="Team2" type="Node" parent="." unique_id=1124684671]

[node name="Projectiles" type="Node" parent="." unique_id=255474915]

[node name="Camera2D" type="Camera2D" parent="." unique_id=1918730371]

[node name="Bars" type="Control" parent="." unique_id=1743594739]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="." unique_id=1213574379]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_left = 80.0
offset_top = -297.0
offset_right = 186.0
offset_bottom = -147.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=2137353938]
layout_mode = 0
offset_left = 48.0
offset_top = -122.0
offset_right = 164.0
offset_bottom = 14.0

[node name="Move" type="TextureButton" parent="Control/VBoxContainer" unique_id=765701733]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="Label" type="Label" parent="Control/VBoxContainer/Move" unique_id=188438315]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Move"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Throw" type="TextureButton" parent="Control/VBoxContainer" unique_id=759513213]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="Label" type="Label" parent="Control/VBoxContainer/Throw" unique_id=580374242]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Throw"
horizontal_alignment = 1
vertical_alignment = 1

[node name="End Turn" type="TextureButton" parent="Control/VBoxContainer" unique_id=38429817]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="Label" type="Label" parent="Control/VBoxContainer/End Turn" unique_id=726091457]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "End"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control" unique_id=385040471]
layout_mode = 0
offset_left = 116.0
offset_top = -86.0
offset_right = 232.0
offset_bottom = 90.0

[node name="Snowball" type="TextureButton" parent="Control/VBoxContainer2" unique_id=1671231976]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/Snowball" unique_id=500121845]
texture_filter = 1
layout_mode = 0
offset_left = 71.0
offset_top = 0.9999995
offset_right = 111.0
offset_bottom = 41.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_dqu5g")

[node name="Label" type="Label" parent="Control/VBoxContainer2/Snowball" unique_id=2133579693]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Snowball"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bomb" type="TextureButton" parent="Control/VBoxContainer2" unique_id=1565964960]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/Bomb" unique_id=1019869765]
texture_filter = 1
layout_mode = 0
offset_left = 72.0
offset_top = 1.9999995
offset_right = 112.0
offset_bottom = 42.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_x0pyu")

[node name="Label" type="Label" parent="Control/VBoxContainer2/Bomb" unique_id=212611739]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Bomb:0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spikes" type="TextureButton" parent="Control/VBoxContainer2" unique_id=969499311]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/Spikes" unique_id=1755547594]
texture_filter = 1
layout_mode = 0
offset_left = 71.0
offset_top = 1.9999995
offset_right = 111.0
offset_bottom = 42.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("10_dg1ng")

[node name="Label" type="Label" parent="Control/VBoxContainer2/Spikes" unique_id=234537379]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Spikes:0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Block" type="TextureButton" parent="Control/VBoxContainer2" unique_id=2063268796]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/Block" unique_id=1707752829]
texture_filter = 1
layout_mode = 0
offset_left = 71.0
offset_top = 0.9999995
offset_right = 111.0
offset_bottom = 41.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("11_yfuda")

[node name="Label" type="Label" parent="Control/VBoxContainer2/Block" unique_id=1548010192]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Block:0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bumper" type="TextureButton" parent="Control/VBoxContainer2" unique_id=1254020002]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_0lysu")
texture_pressed = ExtResource("4_dqu5g")
texture_hover = ExtResource("4_26uyv")
texture_disabled = ExtResource("5_dqu5g")

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/Bumper" unique_id=641357314]
texture_filter = 1
layout_mode = 0
offset_left = 70.0
offset_top = 0.99999946
offset_right = 110.0
offset_bottom = 41.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("12_i8dl0")

[node name="Label" type="Label" parent="Control/VBoxContainer2/Bumper" unique_id=2140562853]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x0pyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Bumper:0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="Node" parent="." unique_id=444204697]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="Sound" unique_id=1568515356]
stream = ExtResource("3_eidgh")
volume_db = -15.207
autoplay = true

[node name="Select" type="AudioStreamPlayer" parent="Sound" unique_id=687584483]
stream = SubResource("AudioStreamRandomizer_h2aik")
volume_db = -9.039

[node name="Thud" type="AudioStreamPlayer" parent="Sound" unique_id=421129240]
stream = SubResource("AudioStreamRandomizer_0wqet")
volume_db = -5.471

[node name="Throw" type="AudioStreamPlayer" parent="Sound" unique_id=837295064]
stream = ExtResource("9_oe8m4")
volume_db = 6.082

[node name="Click" type="AudioStreamPlayer" parent="Sound" unique_id=1262190103]

[node name="Jump" type="AudioStreamPlayer" parent="Sound" unique_id=297365598]
stream = ExtResource("9_oe8m4")
volume_db = 7.298

[node name="Explode" type="AudioStreamPlayer" parent="Sound" unique_id=1594845997]
stream = ExtResource("10_awrha")
volume_db = -5.474

[node name="Die" type="AudioStreamPlayer" parent="Sound" unique_id=208522146]
stream = SubResource("AudioStreamRandomizer_awrha")

[node name="Spikes" type="AudioStreamPlayer" parent="Sound" unique_id=1668234872]
stream = ExtResource("13_f23eu")
volume_db = 2.433

[node name="Damage" type="AudioStreamPlayer" parent="Sound" unique_id=174206490]
stream = SubResource("AudioStreamRandomizer_5xkvv")

[node name="Bumper" type="AudioStreamPlayer" parent="Sound" unique_id=1820004020]
stream = ExtResource("16_oeat8")
volume_db = -9.866

[node name="Message" type="Control" parent="." unique_id=549960002]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 900.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Message" unique_id=1884938290]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -494.0
offset_top = -317.0
offset_right = -398.0
offset_bottom = -285.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("27_i8dl0")

[node name="Label" type="Label" parent="Message/TextureRect" unique_id=1931363836]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.5
offset_right = 41.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_o6lw0")
theme_override_font_sizes/font_size = 15
text = "You lose!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/VBoxContainer/Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Throw" to="." method="_on_throw_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/End Turn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Snowball" to="." method="_on_snowball_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Bomb" to="." method="_on_bomb_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Spikes" to="." method="_on_spikes_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Block" to="." method="_on_block_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Bumper" to="." method="_on_bumper_pressed"]
